# mcp-mdspec

./: .env.example  .gitignore  README.md  TODO.md  main.py  pyproject.toml
src/: config.py  main.py
src/mdnotes/: config.py  main.py  vector_search.py
src/mdspec/: config.py  main.py  vector_search.py
