[project]
name = "mcp-md-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
]

[project.scripts]
mdnotes = "mdnotes.main:main"

[tool.setuptools.packages.find]
where = ["src"]
