[project]
name = "mcp-mdspec"
version = "0.1.0"
description = "Markdown Spec MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "python-frontmatter>=1.0.0",
]

[project.scripts]
mdspec = "mdspec.main:main"

[tool.setuptools.packages.find]
where = ["src"]
